tests/src/frontend/typechecking/invalid/mutable_lambda_in_immutable3.sk
mutable class Foo(f: () -> void)

fun test(): void {
  foo = mutable Foo(() -> void);
  _ = freeze(foo) match {
  | Foo(f) -> f
  }
}
